Mobile style on small screen fixed

--- a/src/components/GridContainer/GridContainer.scss
+++ b/src/components/GridContainer/GridContainer.scss
@@ -2,7 +2,7 @@
 
 .grid-container {
   display: grid;
-  grid-template-rows: minmax(3rem, auto);
+  grid-template-rows: minmax(20rem, auto);
   grid-column: span 2;
   width: 100%;
   height: 100vh;
@@ -21,7 +21,7 @@
   }
 
   @include media-up(xl) {
-    overflow-y: hidden;
+    // overflow-y: hidden;
     max-height: 978px;
   }
 
@@ -61,12 +61,14 @@
     grid-column: 1/-1;
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 8.6rem 6.8rem 2.4rem 6.8rem;
 
     @include media-up(md) {
       grid-column: 6/-1;
       height: min-content;
       align-self: center;
+      align-items: unset;
       justify-content: unset;
       padding: unset;
     }
@@ -74,11 +76,17 @@
     img {
       height: 100%;
       width: auto;
+      min-height: 11rem;
+      max-height: 18.2rem;
       max-width: 100%;
+      min-width: 14.1rem;
 
       @include media-up(md) {
         width: 100%;
         height: auto;
+        max-height: unset;
+        min-height: unset;
+        min-width: unset;
         max-width: 65.8rem;
         margin: 1rem 0 0 -2.5rem;
       }
