--- a/src/components/_shared.scss
+++ b/src/components/_shared.scss
@@ -58,9 +58,13 @@ $breakpoints: (
     }
 
     legend {
-      font-size: 2.6rem;
+      font-size: 2.4rem;
       font-weight: bold;
       margin-bottom: 3.2rem;
+
+      @include media-up(md) {
+        font-size: 2.6rem;
+      }
     }
   }
 }
